<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_32">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_images"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_grey_card"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32"
            app:layout_constraintStart_toStartOf="@id/rv_product_images"
            app:layout_constraintTop_toTopOf="@id/rv_product_images"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32"
            app:layout_constraintEnd_toEndOf="@id/rv_product_images"
            app:layout_constraintTop_toTopOf="@id/rv_product_images"
            android:src="@drawable/ic_baseline_favorite_border_24"/>

        <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/rv_product_images"
            app:layout_constraintEnd_toEndOf="@id/rv_product_images"
            app:layout_constraintStart_toStartOf="@id/rv_product_images"
            app:spi_dotColor="@android:color/darker_gray"
            app:spi_dotSelectedColor="@color/colorRed" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_product_name"
            style="@style/TextStyle"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="Tudor Black Bay"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_product_images" />

        <TextView
            android:id="@+id/tv_reference_label"
            style="@style/TextStyle"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/reference"
            app:layout_constraintStart_toStartOf="@id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_product_reference"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="m7904-1558"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintStart_toEndOf="@id/tv_reference_label"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <TextView
            android:id="@+id/tv_product_amount"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:gravity="end"
            android:text="$658.00"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_product_description"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/description"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reference_label" />

        <ImageView
            android:id="@+id/img_guarantee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_32"
            android:src="@drawable/ic_baseline_security_24"
            app:layout_constraintEnd_toEndOf="@id/tv_guarantee"
            app:layout_constraintStart_toStartOf="@id/tv_guarantee"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

        <TextView
            android:id="@+id/tv_guarantee"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/_5_year_guarantee"
            app:layout_constraintEnd_toStartOf="@+id/tv_automatic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_guarantee" />

        <ImageView
            android:id="@+id/img_automatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_autorenew_24"
            app:layout_constraintEnd_toEndOf="@id/tv_automatic"
            app:layout_constraintStart_toStartOf="@id/tv_automatic"
            app:layout_constraintTop_toTopOf="@id/img_guarantee" />

        <TextView
            android:id="@+id/tv_automatic"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/automatic"
            app:layout_constraintEnd_toStartOf="@+id/tv_case"
            app:layout_constraintStart_toEndOf="@+id/tv_guarantee"
            app:layout_constraintTop_toBottomOf="@id/img_guarantee" />

        <ImageView
            android:id="@+id/img_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_panorama_wide_angle_24"
            app:layout_constraintEnd_toEndOf="@id/tv_case"
            app:layout_constraintStart_toStartOf="@id/tv_case"
            app:layout_constraintTop_toTopOf="@id/img_automatic" />

        <TextView
            android:id="@+id/tv_case"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/_41mm_steel_case"
            app:layout_constraintEnd_toStartOf="@id/tv_waterproof"
            app:layout_constraintStart_toEndOf="@+id/tv_automatic"
            app:layout_constraintTop_toBottomOf="@id/img_guarantee" />

        <ImageView
            android:id="@+id/img_waterproof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_local_drink_24"
            app:layout_constraintEnd_toEndOf="@id/tv_waterproof"
            app:layout_constraintStart_toEndOf="@id/tv_case"
            app:layout_constraintTop_toTopOf="@id/img_automatic" />

        <TextView
            android:id="@+id/tv_waterproof"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/waterproof"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_case"
            app:layout_constraintTop_toBottomOf="@id/img_guarantee" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32"
            android:backgroundTint="@color/colorRed"
            android:text="@string/add_to_bag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_guarantee" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>